Make cursor-stack test utilities compile on JDK 11
The 6.0 CI matrix builds on JDK 11, 17, and 21 (build.xml java.supported=11,17,21).
Two test utilities used post-JDK-11 library APIs, so the JDK 11 axis failed to compile:

- CursorCleanupDifferentialTester used Stream.toList() (Java 16).
  Replaced with .collect(Collectors.toList()).
- DifferentialTestUtils used InputStream.skipNBytes (Java 12).
  Replaced with Guava ByteStreams.skipFully, which has the same skip-exactly-N-or-throw contract.

Both changes preserve behaviour. The cursor branches target trunk, whose default JDK
is newer, so this never surfaced there; the 6.0 backport exposed it.